tests/baselines/reference/propertyAccess5.errors.txt
==== tests/cases/compiler/propertyAccess5.ts (1 errors) ====
    undefined.toBAZ();
              ~~~~~
!!! error TS2339: Property 'toBAZ' does not exist on type 'undefined'.